Update notes for recent data changes
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/branches/5.16.x@12401 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/pcgen/installers/release-notes/pcgen-release-notes-5163RC1.html
+++ b/pcgen/installers/release-notes/pcgen-release-notes-5163RC1.html
@@ -34,11 +34,17 @@ data set and the bestiary previously distributed as a Out Of Cycle data set down
 below: 
 </P>
 <ul>
-<li>[Distant Horizons Games] The Practical Enchanter</li>
-<li>[Paizo] Pathfinder Chronicles: Campaign Setting</li>
 <li>[Distant Horizons Games] Distinctions & Demerits</li>
+<li>[Distant Horizons Games] The Practical Enchanter</li>
+<li>[Paizo] conversion sets for Curse of the Crimson Throne</li>
+<li>[Paizo] Pathfinder Adventure Path: Kingmaker Player's Guide</li>
+<li>[Paizo] Pathfinder Chronicles: Campaign Setting</li>
+<li>[Paizo] Pathfinder Chronicles: Guide to the River Kingdoms</li>
+<li>[Paizo] Pathfinder Companion: Cheliax, Empire of Devils</li>
+<li>[Paizo] Pathfinder conversion sets for Rise of the Runelords</li>
+<li>[Paizo] Pathfinder conversion sets for Second Darkness</li>
+<li>[Paizo] Pathfinder Roleplaying Game Bestiary</li>
 <li>[Paizo] Pathfinder: Council of Thieves Player's Guide</li>
-<li>[Paizo] Pathfinder Adventure Path: Kingmaker Player's Guide
 </li>
 </ul><p>
 See the <a href="#ChangeLog">Change Log for 5.16.3 RC1</a> 
@@ -109,11 +115,17 @@ The highlights of the changes for PCGen 5.16 are listed below:
 <li>[Paradigm Concepts] Forged In Magic</li>
 <li>[Reality Deviant] Critical Feats</li>
 <li>[Skirmisher] Nuisances: Director&#039;s Cut</li>
-<li>[Distant Horizons Games] The Practical Enchanter</li>
-<li>[Paizo] Pathfinder Chronicles: Campaign Setting</li>
 <li>[Distant Horizons Games] Distinctions & Demerits</li>
+<li>[Distant Horizons Games] The Practical Enchanter</li>
+<li>[Paizo] conversion sets for Curse of the Crimson Throne</li>
+<li>[Paizo] Pathfinder Adventure Path: Kingmaker Player's Guide</li>
+<li>[Paizo] Pathfinder Chronicles: Campaign Setting</li>
+<li>[Paizo] Pathfinder Chronicles: Guide to the River Kingdoms</li>
+<li>[Paizo] Pathfinder Companion: Cheliax, Empire of Devils</li>
+<li>[Paizo] Pathfinder conversion sets for Rise of the Runelords</li>
+<li>[Paizo] Pathfinder conversion sets for Second Darkness</li>
+<li>[Paizo] Pathfinder Roleplaying Game Bestiary</li>
 <li>[Paizo] Pathfinder: Council of Thieves Player's Guide</li>
-<li>[Paizo] Pathfinder Adventure Path: Kingmaker Player's Guide
 </li>
 </ul>
 <p>For full details of the new changes in this release, see the <a href="#ChangeLog">Change Log</a> .</p>
@@ -242,7 +254,19 @@ Publishing and Paizo products, please visit <a href="http://paizo.com">Paizo.Com
 </li>
 <li>[<a href='http://jira.pcgen.org/browse/NEWSOURCE-5'>NEWSOURCE-5</a>] -         [Paizo] Pathfinder Chronicles: Campaign Setting
 </li>
+<li>[<a href='http://jira.pcgen.org/browse/NEWSOURCE-6'>NEWSOURCE-6</a>] -         [Paizo] Pathfinder Chronicles: Guide to the River Kingdoms
+</li>
+<li>[<a href='http://jira.pcgen.org/browse/NEWSOURCE-7'>NEWSOURCE-7</a>] -         [Paizo] Pathfinder Companion: Cheliax, Empire of Devils
+</li>
+<li>[<a href='http://jira.pcgen.org/browse/NEWSOURCE-8'>NEWSOURCE-8</a>] -         [Paizo] Pathfinder conversion sets for Rise of the Runelords
+</li>
+<li>[<a href='http://jira.pcgen.org/browse/NEWSOURCE-9'>NEWSOURCE-9</a>] -         [Paizo] conversion sets for Curse of the Crimson Throne
+</li>
+<li>[<a href='http://jira.pcgen.org/browse/NEWSOURCE-10'>NEWSOURCE-10</a>] -         [Paizo] Pathfinder conversion sets for Second Darkness
+</li>
 <li>[<a href='http://jira.pcgen.org/browse/NEWSOURCE-12'>NEWSOURCE-12</a>] -         [Distant Horizons Games] Distinctions &amp; Demerits
+</li>
+<li>[<a href='http://jira.pcgen.org/browse/NEWSOURCE-13'>NEWSOURCE-13</a>] -         [Paizo] Pathfinder Roleplaying Game Bestiary
 </li>
 <li>[<a href='http://jira.pcgen.org/browse/NEWSOURCE-15'>NEWSOURCE-15</a>] -         [Paizo] Pathfinder: Council of Thieves Player's Guide
 </li>
@@ -323,6 +347,10 @@ Publishing and Paizo products, please visit <a href="http://paizo.com">Paizo.Com
 <h3>        Data - New Feature
 </h3>
 <ul>
+<li>[<a href='http://jira.pcgen.org/browse/DATA-29'>DATA-29</a>] -         [Paizo] Pathfinder RPG Core Rulebook Errata
+</li>
+<li>[<a href='http://jira.pcgen.org/browse/DATA-30'>DATA-30</a>] -         [Paizo] Pathfinder RPG Bestiary Errata
+</li>
 <li>[<a href='http://jira.pcgen.org/browse/DATA-42'>DATA-42</a>] -         PCGen Enhancement Re-namer utility dataset
 </li>
 </ul>
