Added LST Editor now working, bolded. And added Into the Green
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/branches/5.16.x@12415 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/pcgen/installers/release-notes/pcgen-release-notes-5163RC1.html
+++ b/pcgen/installers/release-notes/pcgen-release-notes-5163RC1.html
@@ -34,6 +34,7 @@ data set and the bestiary previously distributed as a Out Of Cycle data set down
 below: 
 </P>
 <ul>
+<li>[DragonWing Games] BP - Into the Green</li>
 <li>[Distant Horizons Games] Distinctions & Demerits</li>
 <li>[Distant Horizons Games] The Practical Enchanter</li>
 <li>[Paizo] conversion sets for Curse of the Crimson Throne</li>
@@ -54,6 +55,7 @@ The highlights of the changes for PCGen 5.16 are listed below:
 </p>
 <b>Major Changes:</b>
 <ul>
+<b><li>IN-BUILT LST Editor has several bugs fixed!</li></b>
 <li>Simplified Source Loading Interface</li>
 <li>Automated Data Converter to update 5.14 compliant data to current syntax</li>
 <li>Secret GM character notes that don't export</li>
@@ -115,6 +117,7 @@ The highlights of the changes for PCGen 5.16 are listed below:
 <li>[Paradigm Concepts] Forged In Magic</li>
 <li>[Reality Deviant] Critical Feats</li>
 <li>[Skirmisher] Nuisances: Director&#039;s Cut</li>
+<li>[DragonWing Games] BP - Into the Green</li>
 <li>[Distant Horizons Games] Distinctions & Demerits</li>
 <li>[Distant Horizons Games] The Practical Enchanter</li>
 <li>[Paizo] conversion sets for Curse of the Crimson Throne</li>
@@ -247,9 +250,11 @@ Publishing and Paizo products, please visit <a href="http://paizo.com">Paizo.Com
 		<h2><a name="ChangeLog">Change Log for 5.16.3 RC1</a></h2>
 
 
-<h3>        New Data Source Development
-</h3>
+<h2>        New Data Source Development
+</h2>
 <ul>
+<li>[<a href='http://jira.pcgen.org/browse/NEWSOURCE-2'>NEWSOURCE-2</a>] -         [DragonWing Games] BP - Into the Green
+</li>
 <li>[<a href='http://jira.pcgen.org/browse/NEWSOURCE-4'>NEWSOURCE-4</a>] -         [Distant Horizons Games] The Practical Enchanter
 </li>
 <li>[<a href='http://jira.pcgen.org/browse/NEWSOURCE-5'>NEWSOURCE-5</a>] -         [Paizo] Pathfinder Chronicles: Campaign Setting
@@ -273,6 +278,8 @@ Publishing and Paizo products, please visit <a href="http://paizo.com">Paizo.Com
 <li>[<a href='http://jira.pcgen.org/browse/NEWSOURCE-16'>NEWSOURCE-16</a>] -         [Paizo] Pathfinder Adventure Path: Kingmaker Player's Guide
 </li>
 </ul>
+                
+
                     
 <h3>        Code - Bug
 </h3>
