Update notes for recent code changes
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/branches/5.16.x@12420 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/pcgen/installers/release-notes/pcgen-release-notes-5163RC1.html
+++ b/pcgen/installers/release-notes/pcgen-release-notes-5163RC1.html
@@ -29,14 +29,14 @@
 
 
 <p>PCGen v5.16.3 RC1 is a release candidate for the third patch to PCGen 5.16. We've fixed a number of 
-bugs that have been reported since the 5.16.2 production release. We've also added the errata for PathFinder RPG 
-data set and the bestiary previously distributed as a Out Of Cycle data set download, along with the new sources 
-below: 
+bugs that have been reported since the 5.16.2 production release, including a number in the in-built LST editor. 
+We've also added the errata for PathFinder RPG data set and the bestiary previously distributed as a Out Of Cycle data 
+set download, along with the following new sources: 
 </P>
 <ul>
-<li>[DragonWing Games] BP - Into the Green</li>
 <li>[Distant Horizons Games] Distinctions & Demerits</li>
 <li>[Distant Horizons Games] The Practical Enchanter</li>
+<li>[DragonWing Games] BP - Into the Green</li>
 <li>[Paizo] conversion sets for Curse of the Crimson Throne</li>
 <li>[Paizo] Pathfinder Adventure Path: Kingmaker Player's Guide</li>
 <li>[Paizo] Pathfinder Chronicles: Campaign Setting</li>
@@ -55,7 +55,6 @@ The highlights of the changes for PCGen 5.16 are listed below:
 </p>
 <b>Major Changes:</b>
 <ul>
-<b><li>IN-BUILT LST Editor has several bugs fixed!</li></b>
 <li>Simplified Source Loading Interface</li>
 <li>Automated Data Converter to update 5.14 compliant data to current syntax</li>
 <li>Secret GM character notes that don't export</li>
@@ -63,6 +62,7 @@ The highlights of the changes for PCGen 5.16 are listed below:
 <li>Implement Flight Maneuverability</li>
 <li>Allow multiple experience tables</li>
 <li>Add Quick Search and filtering to the Kit window</li>
+<li>In-built LST Editor has several bugs fixed</li>
 </ul>
 
 <b>LST Changes:</b>
@@ -117,9 +117,9 @@ The highlights of the changes for PCGen 5.16 are listed below:
 <li>[Paradigm Concepts] Forged In Magic</li>
 <li>[Reality Deviant] Critical Feats</li>
 <li>[Skirmisher] Nuisances: Director&#039;s Cut</li>
-<li>[DragonWing Games] BP - Into the Green</li>
 <li>[Distant Horizons Games] Distinctions & Demerits</li>
 <li>[Distant Horizons Games] The Practical Enchanter</li>
+<li>[DragonWing Games] BP - Into the Green</li>
 <li>[Paizo] conversion sets for Curse of the Crimson Throne</li>
 <li>[Paizo] Pathfinder Adventure Path: Kingmaker Player's Guide</li>
 <li>[Paizo] Pathfinder Chronicles: Campaign Setting</li>
@@ -317,6 +317,8 @@ Publishing and Paizo products, please visit <a href="http://paizo.com">Paizo.Com
 <li>[<a href='http://jira.pcgen.org/browse/CODE-138'>CODE-138</a>] -         Class Editor: ADD:ABILITY does not show on advanced page
 </li>
 <li>[<a href='http://jira.pcgen.org/browse/CODE-139'>CODE-139</a>] -         Class Editor: Errors in console on save
+</li>
+<li>[<a href='http://jira.pcgen.org/browse/CODE-140'>CODE-140</a>] -         Domain Editor: Spells lost on save
 </li>
 <li>[<a href='http://jira.pcgen.org/browse/CODE-141'>CODE-141</a>] -         Feat Editor: Errors in console on save
 </li>
