back port preview improvements
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@12430 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/pcgen/preview/d20/fantasy/Standard.htm
+++ b/pcgen/preview/d20/fantasy/Standard.htm
@@ -242,17 +242,19 @@ $Date$
  <tr>
   <td colspan="2" class="h">|NAME| |%FOLLOWEROF|- |FOLLOWEROF| |%|</td>
   <td colspan="2" class="h">|PLAYERNAME|</td>
-  <td colspan="1" class="h">|ALIGNMENT|</td>
+  <td colspan="2" class="h">|ALIGNMENT|</td>
   <td colspan="1" class="h">|DEITY|</td>
-  <td class="h">|POOL.COST|</td>
-  <td rowspan="6" align="center" width="1%" class="border"><font style="font-size:10pt"><a href="#Bio"><img src="|PORTRAIT|" height="100" alt="Click for Bio" border="0" /></a><br /></font></td>
+  <td colspan="1" class="h">|POOL.COST|</td>
+  <td colspan="6" rowspan="6" align="right" width="10%" height="5%" class="border"><font style="font-size:10pt"><a href="#Bio"><img src="file://localhost/|PORTRAIT|" height="100%" Width="100%" alt="Click for Bio" border="0" /></a><br /></font></td>
  </tr>
+
+<!--> <td rowspan="[number of rows to span]"> -->
  <tr>
   <td colspan="2" class="topline">CHARACTER NAME</td>
   <td colspan="2" class="topline">PLAYER</td>
-  <td colspan="1" class="topline">ALIGNMENT</td>
+  <td colspan="2" class="topline">ALIGNMENT</td>
   <td colspan="1" class="topline">DEITY</td>
-  <td class="topline">POINTS</td>
+  <td colspan="1" class="topline">POINTS</td>
  </tr>
  <tr>
   <td colspan="1" class="h">|CLASSLIST|</td>
