--- a/pcgen/preview/d20/fantasy/statblock4.htm
+++ b/pcgen/preview/d20/fantasy/statblock4.htm
@@ -255,7 +255,16 @@ Listen |SKILL.Listen.TOTAL.SIGN|, Spot |SKILL.Spot.TOTAL.SIGN|,
 |ENDMANUALWHITESPACE|
 <br>
 
-<b>Fort</b> |CHECK.FORTITUDE.TOTAL|, <b>Ref</b> |CHECK.REFLEX.TOTAL|, <b>Will</b> |CHECK.2.TOTAL|<br>
+|MANUALWHITESPACE|
+<b>Fort</b>&nbsp;|CHECK.FORTITUDE.TOTAL|,&nbsp;<b>Ref</b>&nbsp;|CHECK.REFLEX.TOTAL|,&nbsp;<b>Will</b>&nbsp;|CHECK.2.TOTAL|
+
+<!-- SaveBonus TYPE Abilities -->
+|FOR,%savebonus,0,count("ABILITIES","CATEGORY=Special Ability","TYPE=SaveBonus","VISIBILITY=DEFAULT[or]VISIBILITY=OUTPUT_ONLY")-1,1,0|
+,&nbsp;|ABILITYALL.Special Ability.VISIBLE.%savebonus.TYPE=SaveBonus.ASPECT.SaveBonus|
+|ENDFOR|
+|ENDMANUALWHITESPACE|
+<br>
+<!-- End SaveBonus TYPE Abilities -->
 
 <!-- Defensive TYPE Abilities -->
 |IIF(count("ABILITIES";"TYPE=Defensive";"VISIBILITY=DEFAULT[or]VISIBILITY=OUTPUT_ONLY")>0)|
@@ -413,6 +422,9 @@ Listen |SKILL.Listen.TOTAL.SIGN|, Spot |SKILL.Spot.TOTAL.SIGN|,
 |MANUALWHITESPACE|
 |FOR,%weap,0,COUNT[EQTYPE.Weapon]-1,1,0|
 <br>
+|IIF(WEAPON.%weap.NAME:Swarm)|
+<b>Melee&nbsp;</b><i>|TEXT.LOWER.WEAPON.%weap.NAME.NOSTAR|&nbsp;</i>&nbsp;(|WEAPON.%weap.DAMAGE|)
+|ELSE|
 |IIF(WEAPON.%weap.ISTYPE.Ranged)|
 <b>Ranged&nbsp;</b>
 |ELSE|
@@ -436,7 +448,7 @@ Listen |SKILL.Listen.TOTAL.SIGN|, Spot |SKILL.Spot.TOTAL.SIGN|,
 |WEAPON.%weap.BASEHIT|&nbsp;
  
 |IIF(WEAPON.%weap.ISTYPE.Ranged)|
-(|WEAPON.%weap.RANGELIST.0.DAMAGE|
+(|WEAPON.%weap.RANGELIST.1.DAMAGE|
 |ELSE|
 (|WEAPON.%weap.DAMAGE|
 |ENDIF|
@@ -451,6 +463,10 @@ Listen |SKILL.Listen.TOTAL.SIGN|, Spot |SKILL.Spot.TOTAL.SIGN|,
 /x|WEAPON.%weap.MULT|
 |ENDIF|
 )
+|IIF(WEAPON.%weap.ISTYPE.Ranged.AND.HASFEAT:Point-Blank Shot.OR.HASFEAT:Point Blank Shot)|
+,&nbsp;within&nbsp;30&nbsp;ft.&nbsp;|WEAPON.%weap.RANGELIST.0.BASEHIT|&nbsp;(|WEAPON.%weap.RANGELIST.0.DAMAGE|)
+|ENDIF|
+|ENDIF|
 |ENDIF|
 |ENDFOR|
 |ENDMANUALWHITESPACE|
@@ -481,27 +497,27 @@ Listen |SKILL.Listen.TOTAL.SIGN|, Spot |SKILL.Spot.TOTAL.SIGN|,
 &nbsp;(|VAR.CMB_Trip.INTVAL.SIGN|&nbsp;trip)
 |ENDIF|
 |IIF(VAR.IF(VAR("CMD")>0;1;0):1)|
-<b>;&nbsp;CMD</b>&nbsp;|VAR.CMD.INTVAL.SIGN|
+<b>;&nbsp;CMD</b>&nbsp;|VAR.CMD.INTVAL|
 |IIF(VAR.IF(VAR("CMD")!=VAR("CMD_BullRush");1;0):1)|
-&nbsp;(|VAR.CMD_BullRush.INTVAL.SIGN|&nbsp;vs&nbsp;bullrush)
+&nbsp;(|VAR.CMD_BullRush.INTVAL|&nbsp;vs&nbsp;bullrush)
 |ENDIF|
 |IIF(VAR.IF(VAR("CMD")!=VAR("CMD_Disarm");1;0):1)|
-&nbsp;(|VAR.CMD_Disarm.INTVAL.SIGN|&nbsp;vs&nbsp;disarm)
+&nbsp;(|VAR.CMD_Disarm.INTVAL|&nbsp;vs&nbsp;disarm)
 |ENDIF|
 |IIF(VAR.IF(VAR("CMD")!=VAR("CMD_Grapple");1;0):1)|
-&nbsp;(|VAR.CMD_Grapple.INTVAL.SIGN|&nbsp;vs&nbsp;grapple)
+&nbsp;(|VAR.CMD_Grapple.INTVAL|&nbsp;vs&nbsp;grapple)
 |ENDIF|
 |IIF(VAR.IF(VAR("CMD")!=VAR("CMD_Overrun");1;0):1)|
-&nbsp;(|VAR.CMD_Overrun.INTVAL.SIGN|&nbsp;vs&nbsp;overrun)
+&nbsp;(|VAR.CMD_Overrun.INTVAL|&nbsp;vs&nbsp;overrun)
 |ENDIF|
 |IIF(VAR.IF(VAR("CMD")!=VAR("CMD_Sunder");1;0):1)|
-&nbsp;(|VAR.CMD_Sunder.INTVAL.SIGN|&nbsp;vs&nbsp;sunder)
+&nbsp;(|VAR.CMD_Sunder.INTVAL|&nbsp;vs&nbsp;sunder)
 |ENDIF|
 |IIF(VAR.IF(var("CantBeTripped")!=0;1;0):1)|
 &nbsp;(can't&nbsp;be&nbsp;tripped)
 |ELSE|
 |IIF(VAR.IF(VAR("CMD")!=VAR("CMD_Trip");1;0):1)|
-&nbsp;(|VAR.CMD_Trip.INTVAL.SIGN|&nbsp;vs&nbsp;trip)
+&nbsp;(|VAR.CMD_Trip.INTVAL|&nbsp;vs&nbsp;trip)
 |ENDIF|
 |ENDIF|
 |ENDIF|
@@ -579,12 +595,17 @@ Listen |SKILL.Listen.TOTAL.SIGN|, Spot |SKILL.Spot.TOTAL.SIGN|,
 |FOR,%class,COUNT[SPELLRACE],COUNT[SPELLRACE]+COUNT[CLASSES]-1,1,0|
 |IIF(SPELLLISTMEMORIZE.%class:false)|
 <br><b>Known |SPELLLISTCLASS.%class| Spells</b> (CL |MANUALWHITESPACE||SPELLLISTCLASS.%class.LEVEL||TEXT.NUMSUFFIX.SPELLLISTCLASS.%class.LEVEL||ENDMANUALWHITESPACE|): 
-|FOR,%level,0,9,1,1|
+|FOR,%level,9,0,-1,1|
 |FOR,%spelllevelcount,COUNT[SPELLSINBOOK.%class.0.%level],COUNT[SPELLSINBOOK.%class.0.%level],1,0|
 |IIF(%spelllevelcount:0)|
 <!-- no memorized spells for SPELLSINBOOK.%class 0 %level -->
 |ELSE|
-|MANUALWHITESPACE||%level||TEXT.NUMSUFFIX.%level||ENDMANUALWHITESPACE| -
+<br>|MANUALWHITESPACE||%level||TEXT.NUMSUFFIX.%level||ENDMANUALWHITESPACE|
+|IIF(%level:0.AND.GAMEMODE:Pathfinder)|
+(at will) -
+|ELSE|
+(|SPELLLISTCAST.%class.%level|/day) -
+|ENDIF|
 |FOR,%spell,0,COUNT[SPELLSINBOOK.%class.0.%level]-2,1,0|
 <i>|TEXT.LOWER.SPELLMEM.%class.0.%level.%spell.NAME|</i>
 |IIF(SPELLMEM.%class.0.%level.%spell.TIMES:1)|
@@ -623,12 +644,12 @@ Listen |SKILL.Listen.TOTAL.SIGN|, Spot |SKILL.Spot.TOTAL.SIGN|,
 |FOR,%class,COUNT[SPELLRACE],COUNT[SPELLRACE]+COUNT[CLASSES]-1,1,0|
 |IIF(SPELLLISTMEMORIZE.%class:true)|
 <br>|SPELLLISTCLASS.%class| (CL |MANUALWHITESPACE||SPELLLISTCLASS.%class.LEVEL||TEXT.NUMSUFFIX.SPELLLISTCLASS.%class.LEVEL||ENDMANUALWHITESPACE|): 
-|FOR,%level,0,9,1,1|
+|FOR,%level,9,0,-1,1|
 |FOR,%spelllevelcount,COUNT[SPELLSINBOOK.%class.%spellbook.%level],COUNT[SPELLSINBOOK.%class.%spellbook.%level],1,0|
 |IIF(%spelllevelcount:0)|
 <!-- no memorized spells for SPELLSINBOOK.%class %spellbook %level -->
 |ELSE|
-|MANUALWHITESPACE||%level||TEXT.NUMSUFFIX.%level||ENDMANUALWHITESPACE| -
+<br>|MANUALWHITESPACE||%level||TEXT.NUMSUFFIX.%level||ENDMANUALWHITESPACE| -
 |FOR,%spell,0,COUNT[SPELLSINBOOK.%class.%spellbook.%level]-2,1,0|
 <i>|TEXT.LOWER.SPELLMEM.%class.%spellbook.%level.%spell.NAME|</i>
 |IIF(SPELLMEM.%class.%spellbook.%level.%spell.TIMES:1)|
@@ -688,7 +709,7 @@ DC |SPELLMEM.%class.%spellbook.%level.%spell.DC|,
 |IIF(SPELLMEM.%class.%spellbook.%level.%spell.TIMES:At Will)|
 at will) 
 |ELSE|
-|SPELLMEM.%class.%spellbook.%level.%spell.TIMES|/|SPELLMEM.%class.%spellbook.%level.%spell.TIMEUNIT|) 
+|SPELLMEM.%class.%spellbook.%level.%spell.TIMES|/|TEXT.LOWER.SPELLMEM.%class.%spellbook.%level.%spell.TIMEUNIT|) 
 |ENDIF|
 |ENDFOR|
 |%|
