--- a/pcgen/preview/d20/fantasy/statblock5.htm
+++ b/pcgen/preview/d20/fantasy/statblock5.htm
@@ -150,6 +150,58 @@ Listen |SKILL.Listen.TOTAL.SIGN|, Spot |SKILL.Spot.TOTAL.SIGN|,
 |MANUALWHITESPACE|
 <b>AC</b>&nbsp;|AC.Total|,&nbsp;<b>touch</b>&nbsp;|AC.Touch|,&nbsp;<b>flat-footed</b>&nbsp;|AC.Flatfooted|
 
+&nbsp;(
+|IIF(AC.Size:0)|
+|ELSE|
+|AC.Size.SIGN|&nbsp;size,&nbsp;
+|ENDIF|
+|IIF(AC.Ability:0)|
+|ELSE|
+|AC.Ability.SIGN|&nbsp;Dex,&nbsp;
+|ENDIF|
+|IIF(AC.NaturalArmor:0)|
+|ELSE|
+|AC.NaturalArmor.SIGN|&nbsp;natural,&nbsp;
+|ENDIF|
+|IIF(AC.Dodge:0)|
+|ELSE|
+|AC.Dodge.SIGN|&nbsp;dodge,&nbsp;
+|ENDIF|
+|IIF(AC.Deflection:0)|
+|ELSE|
+|AC.Deflection.SIGN|&nbsp;deflection,&nbsp;
+|ENDIF|
+|IIF(AC.Misc:0)|
+|ELSE|
+|AC.Misc.SIGN|&nbsp;misc,&nbsp;
+|ENDIF|
+|IIF(AC.Armor:0)|
+|ELSE|
+|AC.Armor.SIGN|&nbsp;|EQ.IS.ARMOR.0.NAME|,&nbsp;
+|ENDIF|
+|IIF(AC.Shield:0)|
+|ELSE|
+|AC.Shield.SIGN| 
+|IIF(EQ.IS.SHIELD.0.TYPE:HEAVY)|
+&nbsp;Heavy&nbsp;Shield
+|ELSE|
+|ENDIF|
+|IIF(EQ.IS.SHIELD.0.TYPE:LIGHT)|
+&nbsp;Light&nbsp;Shield
+|ELSE|
+|ENDIF|
+|IIF(EQ.IS.SHIELD.0.TYPE:BUCKLER)|
+&nbsp;Buckler
+|ELSE|
+|ENDIF|
+|IIF(EQ.IS.SHIELD.0.TYPE:TOWER)|
+&nbsp;Tower&nbsp;Shield
+|ELSE|
+|ENDIF|
+|ENDIF|
+)
+|IIF(VAR.IF(var("UseAlternateDamage")==0;1;0):1)|
+
 <!-- ModifyAC TYPE Abilities -->
 |FOR,%ACfeats,0,count("ABILITIES","CATEGORY=Special Ability","TYPE=ModifyAC","VISIBILITY=DEFAULT[or]VISIBILITY=OUTPUT_ONLY")-1,1,0|
 ,|SPACE|
@@ -172,56 +224,8 @@ Listen |SKILL.Listen.TOTAL.SIGN|, Spot |SKILL.Spot.TOTAL.SIGN|,
 |ENDIF|
 |ENDFOR|
 |ENDMANUALWHITESPACE|
-<!-- End ModifyAC TYPE Abilities -->
 <br>
-
-&nbsp;&nbsp;&nbsp;(
-|IIF(AC.Size:0)|
-|ELSE|
-|AC.Size.SIGN| size, 
-|ENDIF|
-|IIF(AC.Ability:0)|
-|ELSE|
-|AC.Ability.SIGN| Dex, 
-|ENDIF|
-|IIF(AC.NaturalArmor:0)|
-|ELSE|
-|AC.NaturalArmor.SIGN| natural, 
-|ENDIF|
-|IIF(AC.Deflection:0)|
-|ELSE|
-|AC.Deflection.SIGN| deflection, 
-|ENDIF|
-|IIF(AC.Misc:0)|
-|ELSE|
-|AC.Misc.SIGN| misc
-|ENDIF|
-|IIF(AC.Armor:0)|
-|ELSE|
-|AC.Armor.SIGN| |EQ.IS.ARMOR.0.NAME|, 
-|ENDIF|
-|IIF(AC.Shield:0)|
-|ELSE|
-|AC.Shield.SIGN| 
-|IIF(EQ.IS.SHIELD.0.TYPE:HEAVY)|
-Heavy Shield, 
-|ELSE|
-|ENDIF|
-|IIF(EQ.IS.SHIELD.0.TYPE:LIGHT)|
-Light Shield, 
-|ELSE|
-|ENDIF|
-|IIF(EQ.IS.SHIELD.0.TYPE:BUCKLER)|
-Buckler, 
-|ELSE|
-|ENDIF|
-|IIF(EQ.IS.SHIELD.0.TYPE:TOWER)|
-Tower Shield, 
-|ELSE|
-|ENDIF|
-|ENDIF|
-)<br>
-|IIF(VAR.IF(var("UseAlternateDamage")==0;1;0):1)|
+<!-- End ModifyAC TYPE Abilities -->
 
 |MANUALWHITESPACE|
 <b>hp</b>&nbsp;|HP|&nbsp;
@@ -255,7 +259,16 @@ Tower Shield,
 |ENDMANUALWHITESPACE|
 <br>
 
-<b>Fort</b> |CHECK.FORTITUDE.TOTAL|, <b>Ref</b> |CHECK.REFLEX.TOTAL|, <b>Will</b> |CHECK.2.TOTAL|<br>
+|MANUALWHITESPACE|
+<b>Fort</b>&nbsp;|CHECK.FORTITUDE.TOTAL|,&nbsp;<b>Ref</b>&nbsp;|CHECK.REFLEX.TOTAL|,&nbsp;<b>Will</b>&nbsp;|CHECK.2.TOTAL|
+
+<!-- SaveBonus TYPE Abilities -->
+|FOR,%savebonus,0,count("ABILITIES","CATEGORY=Special Ability","TYPE=SaveBonus","VISIBILITY=DEFAULT[or]VISIBILITY=OUTPUT_ONLY")-1,1,0|
+,&nbsp;|ABILITYALL.Special Ability.VISIBLE.%savebonus.TYPE=SaveBonus.ASPECT.SaveBonus|
+|ENDFOR|
+|ENDMANUALWHITESPACE|
+<br>
+<!-- End SaveBonus TYPE Abilities -->
 
 <!-- Defensive TYPE Abilities -->
 |IIF(count("ABILITIES";"TYPE=Defensive";"VISIBILITY=DEFAULT[or]VISIBILITY=OUTPUT_ONLY")>0)|
@@ -427,6 +440,9 @@ Tower Shield,
 |MANUALWHITESPACE|
 |FOR,%weap,0,COUNT[EQTYPE.Weapon]-1,1,0|
 <br>
+|IIF(WEAPON.%weap.NAME:Swarm)|
+<b>Melee&nbsp;</b><i>|TEXT.LOWER.WEAPON.%weap.NAME.NOSTAR|&nbsp;</i>&nbsp;(|WEAPON.%weap.DAMAGE|)
+|ELSE|
 |IIF(WEAPON.%weap.ISTYPE.Ranged)|
 <b>Ranged&nbsp;</b>
 |ELSE|
@@ -450,7 +466,7 @@ Tower Shield,
 |WEAPON.%weap.BASEHIT|&nbsp;
  
 |IIF(WEAPON.%weap.ISTYPE.Ranged)|
-(|WEAPON.%weap.RANGELIST.0.DAMAGE|
+(|WEAPON.%weap.RANGELIST.1.DAMAGE|
 |ELSE|
 (|WEAPON.%weap.DAMAGE|
 |ENDIF|
@@ -465,13 +481,17 @@ Tower Shield,
 /x|WEAPON.%weap.MULT|
 |ENDIF|
 )
+|IIF(WEAPON.%weap.ISTYPE.Ranged.AND.HASFEAT:Point-Blank Shot.OR.HASFEAT:Point Blank Shot)|
+,&nbsp;within&nbsp;30&nbsp;ft.&nbsp;|WEAPON.%weap.RANGELIST.0.BASEHIT|&nbsp;(|WEAPON.%weap.RANGELIST.0.DAMAGE|)
+|ENDIF|
+|ENDIF|
 |ENDIF|
 |ENDFOR|
 |ENDMANUALWHITESPACE|
 <!-- End Attacks -->
 
-<!-- Face and Reach -->
-<br><b>Face</b> |FACE|; <b>Reach</b> |REACH|
+<!-- Space and Reach -->
+<br><b>Space</b> |FACE|; <b>Reach</b> |REACH|
 
 <!-- SpecialAttack TYPE Abilities -->
 |IIF(count("ABILITIES";"CATEGORY=Special Ability";"TYPE=SpecialAttack";"VISIBILITY=DEFAULT[or]VISIBILITY=OUTPUT_ONLY")>0)|
@@ -501,16 +521,75 @@ Tower Shield,
 |ENDIF|
 <!-- End Offensive Gear -->
 
+<!-- Innate Spell-Like Abilities -->
+|IIF(VAR.IF(VAR("COUNT[SPELLSINBOOK.0.1.0]")>0;1;0):1)|
+<br><b>Innate Spell-Like Abilities:</b>
+|FOR,%spellbook,1,1,1,0|
+|FOR,%class,0,0,1,0|
+|FOR,%level,0,0,1,0|
+|%SPELLLISTBOOK.%class.%level.%spellbook|
+|FOR,%spell,0,COUNT[SPELLSINBOOK.%class.%spellbook.%level]-1,1,0|
+<i>|TEXT.LOWER.SPELLMEM.%class.%spellbook.%level.%spell.NAME|</i> (
+|IIF(SPELLMEM.%class.%spellbook.%level.%spell.SAVEINFO:None)|
+|ELSE|
+DC |SPELLMEM.%class.%spellbook.%level.%spell.DC|, 
+|ENDIF|
+|IIF(SPELLMEM.%class.%spellbook.%level.%spell.TIMES:At Will)|
+at will) 
+|ELSE|
+|SPELLMEM.%class.%spellbook.%level.%spell.TIMES|/|TEXT.LOWER.SPELLMEM.%class.%spellbook.%level.%spell.TIMEUNIT|) 
+|ENDIF|
+|ENDFOR|
+|%|
+|ENDFOR|
+|ENDFOR|
+|ENDFOR|
+|ENDIF|
+<!-- End Innate Spell-Like Abilities -->
+
+<!-- Other Spell-Like Abilities -->
+|FOR,%spellbook,2,COUNT[SPELLBOOKS]-1,1,0|
+|IIF(SPELLBOOK.%spellbook.TYPE:Innate Spell List)|
+|IIF(VAR.IF(VAR("COUNT[SPELLSINBOOK.0.%spellbook.0]")>0;1;0):1)|
+<br><b>|SPELLBOOK.%spellbook.NAME| Spell-Like Abilities:</b>
+|FOR,%class,0,0,1,0|
+|FOR,%level,0,0,1,0|
+|%SPELLLISTBOOK.%class.%level.%spellbook|
+|FOR,%spell,0,COUNT[SPELLSINBOOK.%class.%spellbook.%level]-1,1,0|
+<i>|TEXT.LOWER.SPELLMEM.%class.%spellbook.%level.%spell.NAME|</i> (
+|IIF(SPELLMEM.%class.%spellbook.%level.%spell.SAVEINFO:None)|
+|ELSE|
+DC |SPELLMEM.%class.%spellbook.%level.%spell.DC|, 
+|ENDIF|
+|IIF(SPELLMEM.%class.%spellbook.%level.%spell.TIMES:At Will)|
+at will) 
+|ELSE|
+|SPELLMEM.%class.%spellbook.%level.%spell.TIMES|/|SPELLMEM.%class.%spellbook.%level.%spell.TIMEUNIT|) 
+|ENDIF|
+|ENDFOR|
+|%|
+|ENDFOR|
+|ENDFOR|
+|ENDIF|
+|ENDIF|
+|ENDFOR|
+<!-- End Other Spell-Like Abilities -->
+
 <!-- Known Spells -->
 |FOR,%class,COUNT[SPELLRACE],COUNT[SPELLRACE]+COUNT[CLASSES]-1,1,0|
 |IIF(SPELLLISTMEMORIZE.%class:false)|
 <br><b>Known |SPELLLISTCLASS.%class| Spells</b> (CL |MANUALWHITESPACE||SPELLLISTCLASS.%class.LEVEL||TEXT.NUMSUFFIX.SPELLLISTCLASS.%class.LEVEL||ENDMANUALWHITESPACE|): 
-|FOR,%level,0,9,1,1|
+|FOR,%level,9,0,-1,1|
 |FOR,%spelllevelcount,COUNT[SPELLSINBOOK.%class.0.%level],COUNT[SPELLSINBOOK.%class.0.%level],1,0|
 |IIF(%spelllevelcount:0)|
 <!-- no memorized spells for SPELLSINBOOK.%class 0 %level -->
 |ELSE|
-<br>|MANUALWHITESPACE||%level||TEXT.NUMSUFFIX.%level||ENDMANUALWHITESPACE| -
+<br>|MANUALWHITESPACE||%level||TEXT.NUMSUFFIX.%level||ENDMANUALWHITESPACE|
+|IIF(%level:0.AND.GAMEMODE:Pathfinder)|
+(at will) -
+|ELSE|
+(|SPELLLISTCAST.%class.%level|/day) -
+|ENDIF|
 |FOR,%spell,0,COUNT[SPELLSINBOOK.%class.0.%level]-2,1,0|
 <i>|TEXT.LOWER.SPELLMEM.%class.0.%level.%spell.NAME|</i>
 |IIF(SPELLMEM.%class.0.%level.%spell.TIMES:1)|
@@ -549,7 +628,7 @@ Tower Shield,
 |FOR,%class,COUNT[SPELLRACE],COUNT[SPELLRACE]+COUNT[CLASSES]-1,1,0|
 |IIF(SPELLLISTMEMORIZE.%class:true)|
 <br>|SPELLLISTCLASS.%class| (CL |MANUALWHITESPACE||SPELLLISTCLASS.%class.LEVEL||TEXT.NUMSUFFIX.SPELLLISTCLASS.%class.LEVEL||ENDMANUALWHITESPACE|): 
-|FOR,%level,0,9,1,1|
+|FOR,%level,9,0,-1,1|
 |FOR,%spelllevelcount,COUNT[SPELLSINBOOK.%class.%spellbook.%level],COUNT[SPELLSINBOOK.%class.%spellbook.%level],1,0|
 |IIF(%spelllevelcount:0)|
 <!-- no memorized spells for SPELLSINBOOK.%class %spellbook %level -->
@@ -599,60 +678,6 @@ Tower Shield,
 |%|
 <!-- End Domain list -->
 
-<!-- Innate Spell-Like Abilities -->
-|IIF(VAR.IF(VAR("COUNT[SPELLSINBOOK.0.1.0]")>0;1;0):1)|
-<br><b>Innate Spell-Like Abilities:</b>
-|FOR,%spellbook,1,1,1,0|
-|FOR,%class,0,0,1,0|
-|FOR,%level,0,0,1,0|
-|%SPELLLISTBOOK.%class.%level.%spellbook|
-|FOR,%spell,0,COUNT[SPELLSINBOOK.%class.%spellbook.%level]-1,1,0|
-<i>|TEXT.LOWER.SPELLMEM.%class.%spellbook.%level.%spell.NAME|</i> (
-|IIF(SPELLMEM.%class.%spellbook.%level.%spell.SAVEINFO:None)|
-|ELSE|
-DC |SPELLMEM.%class.%spellbook.%level.%spell.DC|, 
-|ENDIF|
-|IIF(SPELLMEM.%class.%spellbook.%level.%spell.TIMES:At Will)|
-at will) 
-|ELSE|
-|SPELLMEM.%class.%spellbook.%level.%spell.TIMES|/|SPELLMEM.%class.%spellbook.%level.%spell.TIMEUNIT|) 
-|ENDIF|
-|ENDFOR|
-|%|
-|ENDFOR|
-|ENDFOR|
-|ENDFOR|
-|ENDIF|
-<!-- End Innate Spell-Like Abilities -->
-
-<!-- Other Spell-Like Abilities -->
-|FOR,%spellbook,2,COUNT[SPELLBOOKS]-1,1,0|
-|IIF(SPELLBOOK.%spellbook.TYPE:Innate Spell List)|
-|IIF(VAR.IF(VAR("COUNT[SPELLSINBOOK.0.%spellbook.0]")>0;1;0):1)|
-<br><b>|SPELLBOOK.%spellbook.NAME| Spell-Like Abilities:</b>
-|FOR,%class,0,0,1,0|
-|FOR,%level,0,0,1,0|
-|%SPELLLISTBOOK.%class.%level.%spellbook|
-|FOR,%spell,0,COUNT[SPELLSINBOOK.%class.%spellbook.%level]-1,1,0|
-<i>|TEXT.LOWER.SPELLMEM.%class.%spellbook.%level.%spell.NAME|</i> (
-|IIF(SPELLMEM.%class.%spellbook.%level.%spell.SAVEINFO:None)|
-|ELSE|
-DC |SPELLMEM.%class.%spellbook.%level.%spell.DC|, 
-|ENDIF|
-|IIF(SPELLMEM.%class.%spellbook.%level.%spell.TIMES:At Will)|
-at will) 
-|ELSE|
-|SPELLMEM.%class.%spellbook.%level.%spell.TIMES|/|SPELLMEM.%class.%spellbook.%level.%spell.TIMEUNIT|) 
-|ENDIF|
-|ENDFOR|
-|%|
-|ENDFOR|
-|ENDFOR|
-|ENDIF|
-|ENDIF|
-|ENDFOR|
-<!-- End Other Spell-Like Abilities -->
-
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
     <td class="divider"><b>STATISTICS</b></td>
@@ -693,27 +718,27 @@ at will)
 &nbsp;(|VAR.CMB_Trip.INTVAL.SIGN|&nbsp;trip)
 |ENDIF|
 |IIF(VAR.IF(VAR("CMD")>0;1;0):1)|
-<b>;&nbsp;CMD</b>&nbsp;|VAR.CMD.INTVAL.SIGN|
+<b>;&nbsp;CMD</b>&nbsp;|VAR.CMD.INTVAL|
 |IIF(VAR.IF(VAR("CMD")!=VAR("CMD_BullRush");1;0):1)|
-&nbsp;(|VAR.CMD_BullRush.INTVAL.SIGN|&nbsp;vs&nbsp;bullrush)
+&nbsp;(|VAR.CMD_BullRush.INTVAL|&nbsp;vs&nbsp;bullrush)
 |ENDIF|
 |IIF(VAR.IF(VAR("CMD")!=VAR("CMD_Disarm");1;0):1)|
-&nbsp;(|VAR.CMD_Disarm.INTVAL.SIGN|&nbsp;vs&nbsp;disarm)
+&nbsp;(|VAR.CMD_Disarm.INTVAL|&nbsp;vs&nbsp;disarm)
 |ENDIF|
 |IIF(VAR.IF(VAR("CMD")!=VAR("CMD_Grapple");1;0):1)|
-&nbsp;(|VAR.CMD_Grapple.INTVAL.SIGN|&nbsp;vs&nbsp;grapple)
+&nbsp;(|VAR.CMD_Grapple.INTVAL|&nbsp;vs&nbsp;grapple)
 |ENDIF|
 |IIF(VAR.IF(VAR("CMD")!=VAR("CMD_Overrun");1;0):1)|
-&nbsp;(|VAR.CMD_Overrun.INTVAL.SIGN|&nbsp;vs&nbsp;overrun)
+&nbsp;(|VAR.CMD_Overrun.INTVAL|&nbsp;vs&nbsp;overrun)
 |ENDIF|
 |IIF(VAR.IF(VAR("CMD")!=VAR("CMD_Sunder");1;0):1)|
-&nbsp;(|VAR.CMD_Sunder.INTVAL.SIGN|&nbsp;vs&nbsp;sunder)
+&nbsp;(|VAR.CMD_Sunder.INTVAL|&nbsp;vs&nbsp;sunder)
 |ENDIF|
 |IIF(VAR.IF(var("CantBeTripped")!=0;1;0):1)|
 &nbsp;(can't&nbsp;be&nbsp;tripped)
 |ELSE|
 |IIF(VAR.IF(VAR("CMD")!=VAR("CMD_Trip");1;0):1)|
-&nbsp;(|VAR.CMD_Trip.INTVAL.SIGN|&nbsp;vs&nbsp;trip)
+&nbsp;(|VAR.CMD_Trip.INTVAL|&nbsp;vs&nbsp;trip)
 |ENDIF|
 |ENDIF|
 |ENDIF|
