Update release notes with recent changes
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/branches/5.16.x@12742 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/pcgen/installers/release-notes/pcgen-release-notes-5163RC3.html
+++ b/pcgen/installers/release-notes/pcgen-release-notes-5163RC3.html
@@ -296,6 +296,8 @@ Publishing and Paizo products, please visit <a href="http://paizo.com">Paizo.Com
 </li>
 <li>[<a href='http://jira.pcgen.org/browse/CODE-57'>CODE-57</a>] -         Data Converter does not mirror directory of converted data on output
 </li>
+<li>[<a href='http://jira.pcgen.org/browse/CODE-64'>CODE-64</a>] -         PCG relative file path to companion
+</li>
 <li>[<a href='http://jira.pcgen.org/browse/CODE-75'>CODE-75</a>] -         TYPE (Global) and ALTTYPE (Equipment) do not unparse .REMOVE.
 </li>
 <li>[<a href='http://jira.pcgen.org/browse/CODE-77'>CODE-77</a>] -         Domain LST FEAT token does not unparse .CLEAR
@@ -313,6 +315,8 @@ Publishing and Paizo products, please visit <a href="http://paizo.com">Paizo.Com
 <li>[<a href='http://jira.pcgen.org/browse/CODE-128'>CODE-128</a>] -         Birthday no longer persisted - backport fix for 2856884 to 5.16.3
 </li>
 <li>[<a href='http://jira.pcgen.org/browse/CODE-130'>CODE-130</a>] -         NullPointerException When Displaying Character  - backport fix for 2845097 to 5.16.3
+</li>
+<li>[<a href='http://jira.pcgen.org/browse/CODE-136'>CODE-136</a>] -         Removing a level does not reduce current xp
 </li>
 <li>[<a href='http://jira.pcgen.org/browse/CODE-137'>CODE-137</a>] -         Spell Editor: Spell copy loses classes and domains
 </li>
@@ -357,6 +361,8 @@ Publishing and Paizo products, please visit <a href="http://paizo.com">Paizo.Com
 <li>[<a href='http://jira.pcgen.org/browse/CODE-174'>CODE-174</a>] -         Language Editor: TYPE does not get selected
 </li>
 <li>[<a href='http://jira.pcgen.org/browse/CODE-176'>CODE-176</a>] -         Load Sources with PC loads incompatible and duplicate sources
+</li>
+<li>[<a href='http://jira.pcgen.org/browse/CODE-177'>CODE-177</a>] -         NPE - Create NPC - 20 Level Human Monk brings up several NPEs
 </li>
 <li>[<a href='http://jira.pcgen.org/browse/CODE-181'>CODE-181</a>] -         Race file - FEAT not adding the FEAT
 </li>
@@ -404,6 +410,8 @@ Publishing and Paizo products, please visit <a href="http://paizo.com">Paizo.Com
 <li>[<a href='http://jira.pcgen.org/browse/DATA-30'>DATA-30</a>] -         [Paizo] Pathfinder RPG Bestiary Errata
 </li>
 <li>[<a href='http://jira.pcgen.org/browse/DATA-42'>DATA-42</a>] -         PCGen Enhancement Re-namer utility dataset
+</li>
+<li>[<a href='http://jira.pcgen.org/browse/DATA-74'>DATA-74</a>] -         Add &quot;Pathfinder RPG for Gamemasters (includes monsters)&quot; to quick sources window
 </li>
 </ul>
                         
